<resources>
    <string name="additional_system_update" />
    <string name="additional_system_update_menu" />
    <string name="input_method_selector_show_automatically_value">0</string>
    <string name="input_method_selector_always_show_value">1</string>
    <string name="input_method_selector_always_hide_value">2</string>
    <string name="input_method_selector_visibility_default_value">0</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="device_info_default">Unknown</string>
    <string name="header_category_wireless_networks">WIRELESS &amp; NETWORKS</string>
    <string name="header_category_device">DEVICE</string>
    <string name="header_category_personal">PERSONAL</string>
    <string name="header_category_system">SYSTEM</string>
    <string name="turn_on_radio">Turn on radio</string>
    <string name="turn_off_radio">Turn off radio</string>
    <string name="sms_over_ims_on">Turn on SMS over IMS</string>
    <string name="sms_over_ims_off">Turn off SMS over IMS</string>
    <string name="ims_reg_required_on">Turn on IMS registration required</string>
    <string name="ims_reg_required_off">Turn off IMS registration required</string>
    <string name="lte_ram_dump_on">Turn on lte ram dump</string>
    <string name="lte_ram_dump_off">Turn off lte ram dump</string>
    <string name="radioInfo_menu_viewADN">View SIM address book</string>
    <string name="radioInfo_menu_viewFDN">View Fixed Dialing Numbers</string>
    <string name="radioInfo_menu_viewSDN">View Service Dialing Numbers</string>
    <string name="radioInfo_menu_getPDP">Get PDP list</string>
    <string name="radioInfo_service_in">In service</string>
    <string name="radioInfo_service_out">Out of service</string>
    <string name="radioInfo_service_emergency">Emergency calls only</string>
    <string name="radioInfo_service_off">Radio off</string>
    <string name="radioInfo_roaming_in">Roaming</string>
    <string name="radioInfo_roaming_not">Not roaming</string>
    <string name="radioInfo_phone_idle">Idle</string>
    <string name="radioInfo_phone_ringing">Ringing</string>
    <string name="radioInfo_phone_offhook">Call in progress</string>
    <string name="radioInfo_data_disconnected">Disconnected</string>
    <string name="radioInfo_data_connecting">Connecting</string>
    <string name="radioInfo_data_connected">Connected</string>
    <string name="radioInfo_data_suspended">Suspended</string>
    <string name="radioInfo_unknown">unknown</string>
    <string name="radioInfo_display_packets">pkts</string>
    <string name="radioInfo_display_bytes">bytes</string>
    <string name="radioInfo_display_dbm">dBm</string>
    <string name="radioInfo_display_asu">asu</string>
    <string name="radioInfo_lac">LAC</string>
    <string name="radioInfo_cid">CID</string>
    <string name="sdcard_unmount">Unmount SD card</string>
    <string name="sdcard_format">Erase internal storage</string>
    <string name="small_font">Small</string>
    <string name="medium_font">Medium</string>
    <string name="large_font">Large</string>
    <string name="font_size_preview_text">Servez à ce monsieur une bière et des kiwis.</string>
    <string name="font_size_save">OK</string>
    <string name="sdcard_setting">SD card</string>
    <string name="battery_info_status_label">Battery status:</string>
    <string name="battery_info_power_label">Power plug:</string>
    <string name="battery_info_scale_label">Battery scale:</string>
    <string name="battery_info_level_label">Battery level:</string>
    <string name="battery_info_health_label">Battery health:</string>
    <string name="battery_info_technology_label">Battery technology:</string>
    <string name="battery_info_voltage_label">Battery voltage:</string>
    <string name="battery_info_voltage_units">mV</string>
    <string name="battery_info_temperature_label">Battery temperature:</string>
    <string name="battery_info_temperature_units">° C</string>
    <string name="battery_info_uptime">Time since boot:</string>
    <string name="battery_info_awake_battery">Awake time on battery:</string>
    <string name="battery_info_awake_plugged">Awake time when charging:</string>
    <string name="battery_info_screen_on">Screen ON time:</string>
    <string name="battery_info_status_unknown">Unknown</string>
    <string name="battery_info_status_charging">Charging</string>
    <string name="battery_info_status_charging_ac">(AC)</string>
    <string name="battery_info_status_charging_usb">(USB)</string>
    <string name="battery_info_status_discharging">Discharging</string>
    <string name="battery_info_status_not_charging">Not charging</string>
    <string name="battery_info_status_full">Full</string>
    <string name="battery_info_power_unplugged">Unplugged</string>
    <string name="battery_info_power_ac">AC</string>
    <string name="battery_info_power_usb">USB</string>
    <string name="battery_info_power_ac_usb">AC+USB</string>
    <string name="battery_info_power_unknown">Unknown</string>
    <string name="battery_info_health_unknown">Unknown</string>
    <string name="battery_info_health_good">Good</string>
    <string name="battery_info_health_overheat">Overheat</string>
    <string name="battery_info_health_dead">Dead</string>
    <string name="battery_info_health_over_voltage">Over voltage</string>
    <string name="battery_info_health_unspecified_failure">Unknown error</string>
    <string name="battery_info_health_cold">Cold</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_visibility">Discoverable</string>
    <string name="bluetooth_is_discoverable">Visible to all nearby Bluetooth devices (%1$s)</string>
    <string name="bluetooth_is_discoverable_always">Visible to all nearby Bluetooth devices</string>
    <string name="bluetooth_not_visible_to_other_devices">Not visible to other Bluetooth devices</string>
    <string name="bluetooth_only_visible_to_paired_devices">Only visible to paired devices</string>
    <string name="bluetooth_not_discoverable">Make device discoverable</string>
    <string name="bluetooth_visibility_timeout">Visibility timeout</string>
    <string name="bluetooth_visibility_timeout_summary">Set how long device will be discoverable</string>
    <string name="bluetooth_lock_voice_dialing">Lock voice dialing</string>
    <string name="bluetooth_lock_voice_dialing_summary">Prevent use of the bluetooth dialer when the screen is locked</string>
    <string name="bluetooth_devices">Bluetooth devices</string>
    <string name="bluetooth_device_name">Device name</string>
    <string name="bluetooth_name_not_set">No name set, using account name</string>
    <string name="bluetooth_scan_for_devices">Scan for devices</string>
    <string name="bluetooth_rename_device">Rename phone</string>
    <string name="bluetooth_rename_button">Rename</string>
    <string name="bluetooth_disconnect_title">Disconnect?</string>
    <string name="bluetooth_disconnect_all_profiles">This will end your connection with:&lt;br>&lt;b>%1$s&lt;/b></string>
    <string name="bluetooth_disable_profile_title">Disable profile?</string>
    <string name="bluetooth_disable_profile_message">This will disable:&lt;br>&lt;b>%1$s&lt;/b>&lt;br>&lt;br>From:&lt;br>&lt;b>%2$s&lt;/b></string>
    <string name="bluetooth_connected">Connected</string>
    <string name="bluetooth_connected_no_headset">Connected (no phone)</string>
    <string name="bluetooth_connected_no_a2dp">Connected (no media)</string>
    <string name="bluetooth_connected_no_headset_no_a2dp">Connected (no phone or media)</string>
    <string name="bluetooth_disconnected">Disconnected</string>
    <string name="bluetooth_disconnecting">Disconnecting…</string>
    <string name="bluetooth_connecting">Connecting…</string>
    <string name="bluetooth_unknown" />
    <string name="bluetooth_pairing">Pairing…</string>
    <string name="bluetooth_device">Unnamed Bluetooth device</string>
    <string name="progress_scanning">Searching</string>
    <string name="progress_tap_to_pair">Touch to pair</string>
    <string name="bluetooth_no_devices_found">No nearby Bluetooth devices were found.</string>
    <string name="bluetooth_notif_ticker">Bluetooth pairing request</string>
    <string name="bluetooth_notif_title">Pairing request</string>
    <string name="bluetooth_notif_message">Touch to pair with %1$s</string>
    <string name="bluetooth_show_received_files">Show received files</string>
    <string name="device_picker">Bluetooth device picker</string>
    <string name="bluetooth_permission_request">Bluetooth permission request</string>
    <string name="bluetooth_ask_enablement">An app wants to turn on Bluetooth. Allow?</string>
    <string name="cancel">Cancel</string>
    <string name="wifi_notify_open_networks">Network notification</string>
    <string name="wifi_notify_open_networks_summary">Notify me when an open network is available</string>
    <string name="wifi_enable_watchdog_service">Avoid poor connections</string>
    <string name="wifi_enable_watchdog_service_summary">"Don't use a WLAN network unless it has a good Internet connection"</string>
    <string name="wifi_setting_sleep_policy_title">Keep WLAN on during sleep</string>
    <string name="wifi_save">Save</string>
    <string name="wifi_advanced_titlebar">Advanced WLAN</string>
    <string name="wifi_setting_frequency_band_title">WLAN frequency band</string>
    <string name="wifi_setting_frequency_band_summary">Specify the frequency range of operation</string>
    <string name="wifi_setting_priority_up">Up</string>
    <string name="wifi_setting_priority_down">Down</string>
    <string name="wifi_auto_link">Auto link network</string>
    <string name="wifi_auto_link_summary">"Set the way of network's connection"</string>
    <string name="wifi_advanced_mac_address_title">MAC address</string>
    <string name="wifi_advanced_ip_address_title">IP address</string>
    <string name="wifi_gateway">Gateway</string>
    <string name="wifi_netmask">Netmask</string>
    <string name="wifi_wapi_cert_manage_titlebar">WAPI Certificate Management</string>
    <string name="TD_GSM_Change_WLAN_title">TD/GSM->WLAN</string>
    <string name="device_info_not_available">Not available</string>
    <string name="status_imei">IMEI</string>
    <string name="status_imei_sv">IMEI SV</string>
    <string name="status_number">My phone number</string>
    <string name="status_min_number">MIN</string>
    <string name="status_prl_version">PRL Version</string>
    <string name="status_meid_number">MEID</string>
    <string name="status_network_type">Mobile network type</string>
    <string name="status_data_state">Mobile network state</string>
    <string name="status_service_state">Service state</string>
    <string name="status_signal_strength">Signal strength</string>
    <string name="status_roaming">Roaming</string>
    <string name="status_operator">Network</string>
    <string name="sim2_status_info">SIM2 status</string>
    <string name="test_config_button_ok">确定</string>
    <string name="test_config_button_cancel">取消</string>
    <string name="offlinelog_title">关闭离线log</string>
    <string name="copyofflinelog_title">拷贝离线log到内部T卡</string>
    <string name="dm_register_title">关闭DM短信</string>
    <string name="call_forward_title">关闭开机查询呼叫转移</string>
    <string name="dcd_title">关闭DCD快讯</string>
    <string name="streaming_title">流媒体被事件打断，恢复后自动播放</string>
    <string name="qos_title">用CTA测试需要的QOS配置</string>
    <string name="wifi_title">把WIFI字样修改成WLAN</string>
    <string name="email_reg_title">换SIM卡后139邮箱不发查询账号短信</string>
    <string name="usb_mode_title">开启USB工程模式</string>
    <string name="open_modem_offline_trace">开启STE离线log</string>
    <string name="switch_to_lcusb">开机切换到LC USB</string>
    <string name="gps_log_enable">开启GPS离线log</string>
</resources>