<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/sim2_status_info"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference android:persistent="false" android:title="@string/status_number" android:key="number2" android:summary="@string/device_info_not_available" style="?android:attr/preferenceInformationStyle" />
    <Preference android:persistent="false" android:title="@string/status_min_number" android:key="min_number2" android:summary="@string/device_info_not_available" style="?android:attr/preferenceInformationStyle" />
    <Preference android:persistent="false" android:title="@string/status_prl_version" android:key="prl_version2" android:summary="@string/device_info_not_available" style="?android:attr/preferenceInformationStyle" />
    <Preference android:persistent="false" android:title="@string/status_meid_number" android:key="meid_number2" android:summary="@string/device_info_not_available" style="?android:attr/preferenceInformationStyle" />
    <Preference android:persistent="false" android:title="@string/status_operator" android:key="operator_name2" android:summary="@string/device_info_not_available" style="?android:attr/preferenceInformationStyle" />
    <Preference android:persistent="false" android:title="@string/status_signal_strength" android:key="signal_strength2" android:summary="@string/device_info_not_available" style="?android:attr/preferenceInformationStyle" />
    <Preference android:persistent="false" android:title="@string/status_network_type" android:key="network_type2" android:summary="@string/device_info_not_available" style="?android:attr/preferenceInformationStyle" />
    <Preference android:persistent="false" android:title="@string/status_service_state" android:key="service_state2" android:summary="@string/device_info_not_available" style="?android:attr/preferenceInformationStyle" />
    <Preference android:persistent="false" android:title="@string/status_roaming" android:key="roaming_state2" android:summary="@string/device_info_not_available" style="?android:attr/preferenceInformationStyle" />
    <Preference android:persistent="false" android:title="@string/status_data_state" android:key="data_state2" android:summary="@string/device_info_not_available" style="?android:attr/preferenceInformationStyle" />
    <Preference android:persistent="false" android:title="@string/status_imei" android:key="imei2" android:summary="@string/device_info_not_available" style="?android:attr/preferenceInformationStyle" />
    <Preference android:persistent="false" android:title="@string/status_imei_sv" android:key="imei_sv2" android:summary="@string/device_info_not_available" style="?android:attr/preferenceInformationStyle" />
</PreferenceScreen>