<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:id="@id/wifi_set_priority_up" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wifi_setting_priority_up" android:layout_weight="1.0" />
    <Button android:id="@id/wifi_set_priority_down" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wifi_setting_priority_down" android:layout_weight="1.0" />
    <Button android:id="@id/wifi_set_priority_save" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wifi_save" android:layout_weight="1.0" />
    <Button android:id="@id/wifi_set_priority_cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel" android:layout_weight="1.0" />
</LinearLayout>